scrollbar add task popup fixed

--- a/css/board-add-task-template.css
+++ b/css/board-add-task-template.css
@@ -7,14 +7,14 @@
 
 .add-task-popup {
     background: #f9f9f9;
-    display: flex;
+    display: flow-root;
     justify-content: center;
     align-items: center;
     width: 25vw;
     border-radius: 30px;
-    max-height: 200%;
-    overflow-y: auto;
-}
+    max-height: 100%;
+    overflow-y: scroll;
+} 
 
 .title {
     width: 100%;
@@ -304,8 +304,12 @@ button:hover {
     padding: 6px;
 }
 
+::-webkit-scrollbar{
+    width: 1px;
+}
+
 .d-none {
-    display: none;
+    display: none !important;
 }
 
 @media(max-width: 1400px) {
