--- a/css/board.css
+++ b/css/board.css
@@ -336,7 +336,10 @@ height: 15px;
     right: 0;
     align-items: center;
     justify-content: center;
-    overflow-y: scroll;
+    overflow-y: scroll !important;
+    min-height: 100%;
+    height: auto !important;
+    margin: auto;
 }
 
 .edit-task{
